--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,18 +21,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="普通键盘" />
-
             <EditText
-                android:id="@+id/special_ed"
+                android:id="@+id/special_ed1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="特殊键盘" />
-
             <TextView
                 android:id="@+id/other_test"
                 android:layout_width="match_parent"
                 android:text="Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors.Atom is a hackable text editor for the 21st century, built on Electron, and based on everything we love about our favorite editors."
                 android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/special_ed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="特殊键盘" />
         </LinearLayout>
 
     </ScrollView>
